--- a/templates/base.html
+++ b/templates/base.html
@@ -12,7 +12,13 @@
     <link rel="stylesheet" href="{% static 'libs/iziToast/1.4.0/iziToast.min.css' %}">
     <link rel="stylesheet" href="{% static 'theme-ct/css/style.css' %}">
     <link rel="stylesheet" href="{% static 'theme-ct/css/res.css' %}">
-    {#	<link rel="shortcut icon" href="{{$setting->icon}}"/>#}
+
+    <link rel="shortcut icon" href="http://yourdomain.com/path/icon57.png"/>
+    <link rel="apple-touch-icon" href="http://yourdomain.com/path/icon57.png"/>
+    <link rel="apple-touch-icon" sizes="72x72" href="http://yourdomain.com/path/icon72.png"/>
+    <link rel="apple-touch-icon" sizes="114x114" href="http://yourdomain.com/path/icon114.png"/>
+    <link rel="apple-touch-icon" sizes="144x144" href="http://yourdomain.com/path/icon144.png"/>
+
     {% block head %}{% endblock %}
 </head>
 <body id="top">
