--- a/researcher/templates/researcher/project.html
+++ b/researcher/templates/researcher/project.html
@@ -37,7 +37,7 @@
                                         <pre contenteditable="true" id="id_task_title"></pre>
                                     </div>
                                     <ul class="tagId-list inline-list">
-                                        <li class="tagId-item">
+                                        {% comment %} <li class="tagId-item">
                                             <div class="relative">
                                                 <img src="{{ project.involved_user.industryUser.photo }}"
                                                      width="46px" height="46px" class="m-0"
@@ -52,7 +52,7 @@
                                                 <div class="dir-rtl">رضا باسره</div>
                                                 <div>@reza_basereh</div>
                                             </div>
-                                        </li>
+                                        </li> {% endcomment %}
                                     </ul>
                                     <div class="ct-task-option d-flex"
                                          style="position: absolute;bottom: -50px;right: 0;">
