complete task in researcher active project

--- a/researcher/templates/researcher/project.html
+++ b/researcher/templates/researcher/project.html
@@ -36,24 +36,7 @@
                                         <label for="id_task_title">عنوان</label>
                                         <pre contenteditable="true" id="id_task_title"></pre>
                                     </div>
-                                    <ul class="tagId-list inline-list">
-                                        {% comment %} <li class="tagId-item">
-                                            <div class="relative">
-                                                <img src="{{ project.involved_user.industryUser.photo }}"
-                                                     width="46px" height="46px" class="m-0"
-                                                     alt="{{ project.involved_user.industryUser.fullname }}">
-                                                <svg width="1em" height="1em" viewBox="0 0 16 16" class="bi bi-x"
-                                                     fill="currentColor" xmlns="http://www.w3.org/2000/svg">
-                                                    <path fill-rule="evenodd"
-                                                          d="M4.646 4.646a.5.5 0 0 1 .708 0L8 7.293l2.646-2.647a.5.5 0 0 1 .708.708L8.707 8l2.647 2.646a.5.5 0 0 1-.708.708L8 8.707l-2.646 2.647a.5.5 0 0 1-.708-.708L7.293 8 4.646 5.354a.5.5 0 0 1 0-.708z"></path>
-                                                </svg>
-                                            </div>
-                                            <div class="p-1 tagId-item-info">
-                                                <div class="dir-rtl">رضا باسره</div>
-                                                <div>@reza_basereh</div>
-                                            </div>
-                                        </li> {% endcomment %}
-                                    </ul>
+                                    <ul class="tagId-list inline-list"></ul>
                                     <div class="ct-task-option d-flex"
                                          style="position: absolute;bottom: -50px;right: 0;">
                                         <div class="ct-task-due ct-option-btn">
@@ -151,7 +134,7 @@
                         </div>
                     </div>
                     <div class="modal-footer">
-                        <button type="submit" class="btn btn-primary" id="accept-project" style="z-index: 2">
+                        <button type="submit" class="btn btn-primary" style="z-index: 2">
                             ثبت
                         </button>
                     </div>
