--- a/expert/templates/expert/userInfo.html
+++ b/expert/templates/expert/userInfo.html
@@ -90,6 +90,10 @@
                         <a class="nav-item nav-link fs-15" id="nav-upload-tab" data-toggle="tab" href="#nav-upload"
                            role="tab"
                            aria-controls="nav-upload" aria-selected="false">بارگذاری رزومه</a>
+                        <a class="nav-item nav-link fs-15" id="nav-connect-bot-tab" data-toggle="tab"
+                           href="#nav-connect-bot"
+                           role="tab"
+                           aria-controls="nav-connect-bot" aria-selected="false">اتصال به بات</a>
                         <a class="nav-item nav-link fs-15" id="nav-setting-tab" data-toggle="tab" href="#nav-setting"
                            role="tab"
                            aria-controls="nav-setting" aria-selected="false">تنظیمات</a>
@@ -694,6 +698,34 @@
                                                         <input type="file" class="form-control-file"
                                                                id="uploadResume" name="resume" hidden>
                                                     {% endif %}
+                                                </div>
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="tab-pane fade" id="nav-connect-bot" role="tabpanel"
+                         aria-labelledby="nav-connect-bot-tab">
+                        <div class="card box flow-root-display w-100">
+                            <div class="box-body">
+                                <div class="row">
+                                    <div class="col-lg-12 text-right">
+                                        <p></p>
+                                        <div class="row dir-ltr">
+                                            <div class="col-lg-4 offset-lg-4">
+                                                <div class="form-group text-center">
+                                                    <div class="input-group my-3 dir-ltr">
+                                                        <input type="text"
+                                                               class="form-control m-0 bg-white dir-ltr"
+                                                               value="1234567897878" readonly>
+                                                        <div class="input-group-append">
+                                                            <span class="input-group-text css-hover js-copy-clipboard dir-rtl">
+                                                                <i class="far fa-clipboard"></i>
+                                                            </span>
+                                                        </div>
+                                                    </div>
                                                 </div>
                                             </div>
                                         </div>
