--- a/industry/templates/industry/userInfo.html
+++ b/industry/templates/industry/userInfo.html
@@ -36,6 +36,10 @@
                            href="#nav-interface"
                            role="tab"
                            aria-controls="nav-interface" aria-selected="false">مشخصات رابط</a>
+                        <a class="nav-item nav-link fs-15" id="nav-connect-bot-tab" data-toggle="tab"
+                           href="#nav-connect-bot"
+                           role="tab"
+                           aria-controls="nav-connect-bot" aria-selected="false">اتصال به بات</a>
                     </div>
                 </nav>
                 <div class="tab-content mt-3" id="nav-tabContent">
@@ -345,6 +349,34 @@
                                         {% endif %}
                                         <div class="error">
                                             {% render_field interface_form.email.errors %}
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="tab-pane fade" id="nav-connect-bot" role="tabpanel"
+                         aria-labelledby="nav-connect-bot-tab">
+                        <div class="card box flow-root-display w-100">
+                            <div class="box-body">
+                                <div class="row">
+                                    <div class="col-lg-12 text-right">
+                                        <p></p>
+                                        <div class="row dir-ltr">
+                                            <div class="col-lg-4 offset-lg-4">
+                                                <div class="form-group text-center">
+                                                    <div class="input-group my-3 dir-ltr">
+                                                        <input type="text"
+                                                               class="form-control m-0 bg-white dir-ltr"
+                                                               value="1234567897878" readonly>
+                                                        <div class="input-group-append">
+                                                            <span class="input-group-text css-hover js-copy-clipboard dir-rtl">
+                                                                <i class="far fa-clipboard"></i>
+                                                            </span>
+                                                        </div>
+                                                    </div>
+                                                </div>
+                                            </div>
                                         </div>
                                     </div>
                                 </div>
