--- a/researcher/templates/researcher/userInfo.html
+++ b/researcher/templates/researcher/userInfo.html
@@ -42,6 +42,10 @@
                         <a class="nav-item nav-link fs-15" id="nav-upload-tab" data-toggle="tab" href="#nav-upload"
                            role="tab"
                            aria-controls="nav-upload" aria-selected="false">بارگذاری رزومه</a>
+                        <a class="nav-item nav-link fs-15" id="nav-connect-bot-tab" data-toggle="tab"
+                           href="#nav-connect-bot"
+                           role="tab"
+                           aria-controls="nav-connect-bot" aria-selected="false">اتصال به بات</a>
                     </div>
                 </nav>
                 <div class="tab-content" id="nav-tabContent">
@@ -372,7 +376,7 @@
                                     <div class="col-lg-12 text-right">
                                         <div class="form-group">
                                             <span class="sub-header">چند نمونه از بهترین افتخارات - مقالات خاص، جوایز و ...- به همراه سال وقوع</span>
-                                            {% render_field form.awards id="honours" class="w-100 mt-0" dir="rtl" placeholder="اینجا وارد کنید ..." rows="5"%}
+                                            {% render_field form.awards id="honours" class="w-100 mt-0" dir="rtl" placeholder="اینجا وارد کنید ..." rows="5" %}
                                         </div>
                                     </div>
                                 </div>
@@ -446,6 +450,34 @@
                                                         <input type="file" class="form-control-file"
                                                                id="uploadResume" name="resume" hidden>
                                                     {% endif %}
+                                                </div>
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="tab-pane fade" id="nav-connect-bot" role="tabpanel"
+                         aria-labelledby="nav-connect-bot-tab">
+                        <div class="card box flow-root-display w-100">
+                            <div class="box-body">
+                                <div class="row">
+                                    <div class="col-lg-12 text-right">
+                                        <p></p>
+                                        <div class="row dir-ltr">
+                                            <div class="col-lg-4 offset-lg-4">
+                                                <div class="form-group text-center">
+                                                    <div class="input-group my-3 dir-ltr">
+                                                        <input type="text"
+                                                               class="form-control m-0 bg-white dir-ltr"
+                                                               value="1234567897878" readonly>
+                                                        <div class="input-group-append">
+                                                            <span class="input-group-text css-hover js-copy-clipboard dir-rtl">
+                                                                <i class="far fa-clipboard"></i>
+                                                            </span>
+                                                        </div>
+                                                    </div>
                                                 </div>
                                             </div>
                                         </div>
