--- a/templates/project/index.html
+++ b/templates/project/index.html
@@ -1,10 +1,170 @@
 <!DOCTYPE html>
-<html lang="en">
+{% load static %}
+<html lang="en" dir="ltr">
 <head>
-    <meta charset="UTF-8">
-    <title>Title</title>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <title></title>
+    <link rel="icon" sizes="16*16" href="{% static 'img/circle_logo.png' %}">
+    <link rel="stylesheet" href="{% static 'libs/Bootstrap/4.5.0/bootstrap.min.css' %}">
+    <link rel="stylesheet" href="{% static 'fonts/fontawesome/5.15.1/css/all.min.css' %}">
+    <link rel="stylesheet" href="{% static 'libs/OwlCarousel2/2.3.4/owl.carousel.min.css' %}">
+    <link rel="stylesheet" href="{% static 'libs/OwlCarousel2/2.3.4/owl.theme.default.min.css' %}">
+    <link rel="stylesheet" href="{% static 'libs/iziToast/1.4.0/iziToast.min.css' %}">
+    {% if request.user.is_authenticated %}
+        <link rel="stylesheet" href="{% static 'libs/jQuery/UI/1.12.1/jquery-ui.min.css' %}">
+        <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+        <link rel="stylesheet" href="{% static 'libs/Swiper/4.5.0/swiper.min.css' %}">
+        <link rel="stylesheet" href="{% static 'libs/jQuery/tagsinput/1.3.6/jquery.tagsinput.min.css' %}">
+        <link rel="stylesheet" href="{% static 'css/comments.css' %}">
+        <link rel="stylesheet" href="{% static 'css/style.css' %}">
+    {% else %}
+        <link rel="stylesheet" href="{% static 'theme-ct/css/style.css' %}">
+        <link rel="stylesheet" href="{% static 'theme-ct/css/res.css' %}">
+    {% endif %}
 </head>
 <body>
+{% if request.user.is_authenticated %}
+    <div class="modal fade" id="feedbackModal" data-backdrop="static" data-keyboard="false" tabindex="-1"
+         role="dialog" aria-labelledby="feedbackModalLabel" aria-hidden="true">
+        <div class="modal-dialog modal-dialog-centered">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h6 class="modal-title default" id="feedbackModalLabel">ثبت بازخورد</h6>
+                    <button type="button" class="close" data-dismiss="modal" aria-label="Close"></button>
+                </div>
+                <form action="{% url 'chamran:addOpinion' %}" id="feedback_ajax_form">
+                    <div class="modal-body">
+                        <div class="form-group">
+                            <label for="feedbackEmail">پست الکترونیکی</label>
+                            <input type="email" name='email' class="form-control" id="feedbackEmail"
+                                   aria-describedby="emailHelp">
+                        </div>
+                        <div class="form-group">
+                            <label for="feedbackOpinion">متن مشکل</label>
+                            <textarea name='opinion' class="form-control" id="feedbackOpinion" rows="4"></textarea>
+                        </div>
+                    </div>
+                    <div class="modal-footer">
+                        <button type="submit" class="btn btn-primary">ارسال</button>
+                    </div>
+                </form>
+            </div>
+        </div>
+    </div>
+    <div class="main">
+        <div class="top-bar">
+            <img src="{% static 'img/logo_text_beta.png' %}" alt="chamranTeam" id="maxLogo">
+            <img src="{% static 'img/logo_beta.png' %}" alt="chamranTeam" id="minLogo">
+            <div class="dropdown">
+                <button type="button" name="button" class="btn dropdown-toggle" id="dropdown-btn"
+                        data-toggle="dropdown">
+                    {% if request.user.expertuser.expertform.photo %}
+                        <img src="{{ request.user.expertuser.expertform.photo.url }}" alt="profile"
+                             class="dropdown-img profile"
+                             height="45px">
+                    {% else %}
+                        <img src="{% static 'expert/img/profile.jpg' %}" alt="profile"
+                             class="dropdown-img profile"
+                             height="45px">
+                    {% endif %}
+                </button>
+                <ul class="dropdown-menu text-center" role="menu" aria-labelledby="dropdown-btn" id="dropdown">
+                    <li><a href="{% url 'expert:userInfo' %}">اطلاعات کاربری<i class="fas fa-cog"></i></a></li>
+                    <li><a href="{% url 'chamran:send_reset_email' %}">تغییر رمز عبور<i class="fas fa-lock"></i></a>
+                    </li>
+                    <hr>
+                    <li><a href="{% url 'chamran:logout' %}">خروج<i class="fas fa-sign-out-alt"></i></a></li>
+                </ul>
+            </div>
+            <div class="feed-back">
+                <button type="button" class="btn" data-toggle="modal" data-target="#feedbackModal">
+                    <svg width="1em" height="1em" viewBox="0 0 16 16" class="bi bi-chat-left-text" fill="currentColor"
+                         xmlns="http://www.w3.org/2000/svg">
+                        <path fill-rule="evenodd"
+                              d="M14 1H2a1 1 0 0 0-1 1v11.586l2-2A2 2 0 0 1 4.414 11H14a1 1 0 0 0 1-1V2a1 1 0 0 0-1-1zM2 0a2 2 0 0 0-2 2v12.793a.5.5 0 0 0 .854.353l2.853-2.853A1 1 0 0 1 4.414 12H14a2 2 0 0 0 2-2V2a2 2 0 0 0-2-2H2z"></path>
+                        <path fill-rule="evenodd"
+                              d="M3 3.5a.5.5 0 0 1 .5-.5h9a.5.5 0 0 1 0 1h-9a.5.5 0 0 1-.5-.5zM3 6a.5.5 0 0 1 .5-.5h9a.5.5 0 0 1 0 1h-9A.5.5 0 0 1 3 6zm0 2.5a.5.5 0 0 1 .5-.5h5a.5.5 0 0 1 0 1h-5a.5.5 0 0 1-.5-.5z"></path>
+                    </svg>
+                </button>
+            </div>
+            <a href="#" id="toggle"><span></span></a>
+        </div>
+        <div class="content">
+            <div class="container">
+                <div id="top"></div>
 
+            </div>
+        </div>
+    </div>
+{% else %} {# For Anonymous users with Link #}
+    <header>
+        <div class="container">
+            <div class="navicon" id="navicon">
+                <i class="fas fa-bars"></i>
+            </div>
+            <div class="logo">
+                <a href="{% url 'chamran:home' %}">
+                    <img src="{% static 'theme-ct/images/logo.png' %}" alt="ChamranTeam Logo">
+                </a>
+            </div>
+            <div class="enter_icon" id="enter_icon">
+                <a href="{% url 'chamran:login' %}">
+                    <i class="fas fa-user"></i>
+                </a>
+            </div>
+            <nav id="nav">
+                <ul>
+                    <li class="goToDiv" data-div="top" data-next="AboutUs">
+                        <a href="{% if request.path == "/" %}#top{% else %}{% url 'chamran:home' %}{% endif %}">
+                            صفحه اصلی
+                        </a>
+                    </li>
+                    <li class="goToDiv" data-div="AboutUs" data-next="whyUs">
+                        <a href="/#AboutUs">درباره ما</a>
+                    </li>
+                    <li class="goToDiv" data-div="whyUs" data-next="Cooperation">
+                        <a href="/#whyUs">مزایای عضویت</a>
+                    </li>
+                    <li class="goToDiv" data-div="Cooperation" data-next="contactUs">
+                        <a href="/#Cooperation">تقاضای همکاری با ما</a>
+                    </li>
+                    <li class="goToDiv" data-div="contactUs" data-next="footer">
+                        <a href="/#contactUs">تماس با ما</a>
+                    </li>
+                </ul>
+            </nav>
+            <div class="enter">
+                <a href="{% url 'chamran:login' %}">
+                    ورود | عضویت
+                </a>
+            </div>
+        </div>
+    </header>
+
+    <div class="container-fluid">
+        <div class="row">
+            <div class="col">
+                {% include 'project/layout/_anonymous.html' %}
+            </div>
+        </div>
+    </div>
+{% endif %}
+
+
+{% if request.user.is_authenticated %}
+    <script type="text/javascript" src="{% static 'libs/jQuery/3.5.1/jquery.min.js' %}"></script>
+    <script src="{% static 'libs/jQuery/UI/1.12.1/jquery-ui.min.js' %}"></script>
+    <script src="{% static 'libs/Propper/1.14.7/popper.min.js' %}"></script>
+    <script src="{% static 'libs/Bootstrap/4.5.0/bootstrap.min.js' %}"></script>
+    <script type="text/javascript" src="{% static 'libs/iziToast/1.4.0/iziToast.min.js' %}"></script>
+    <script src="{% static 'libs/jQuery/tagsinput/1.3.6/jquery.tagsinput.min.js' %}"></script>
+    <script src="{% static 'libs/FancyTree/2.30.2/fancytree-all-deps.min.js' %}"></script>
+    <script type="text/javascript" src="{% static 'js/persianumber.min.js' %}"></script>
+    <script type="text/javascript" src="{% static 'js/autosize.min.js' %}"></script>
+    <script type="text/javascript" src="{% static 'js/script-functions.js' %}"></script>
+{% else %}
+    No
+{% endif %}
 </body>
 </html>
