--- a/static/css/style.css
+++ b/static/css/style.css
@@ -6912,6 +6912,7 @@ pre[contenteditable="true"] {
     float: right;
     display: flex;
     position: relative;
+    margin-bottom: 0.5rem;
 }
 
 .tagId-list .tagId-item {
