--- a/templates/project/layout/researcher_info.html
+++ b/templates/project/layout/researcher_info.html
@@ -37,7 +37,7 @@
                                         </div>
                                     </div>
                                 </div>
-                                {% if userType == "industry" %}
+                                {% if account_type == "industry" %}
                                     <div class="col-12">
                                         <div class="request-response d-none">
                                             <button class="border-button confirm-researcher"
@@ -58,7 +58,7 @@
                         </div>
                     </div>
                 </div>
-                {% if userType != "researcher" %}
+                {% if account_type != "researcher" %}
                     <div class="row mbottom-lg-25">
                         <div class="col-md-3">
                             <div class="divide__line text-right">
