--- a/templates/project/layout/expertResume.html
+++ b/templates/project/layout/expertResume.html
@@ -43,7 +43,7 @@
                         </div>
                     </div>
                 </div>
-                {% if userType == "industry" %}
+                {% if account_type == "industry" %}
                     <div class="row">
                         <div class="col-12">
                             <div class="divide__line text-right">
