--- a/templates/project/layout/content.html
+++ b/templates/project/layout/content.html
@@ -565,30 +565,38 @@
                                                 <div class="nav flex-column nav-pills" id="v-pills-tab"
                                                      role="tablist"
                                                      aria-orientation="vertical">
+                                                {% if projectForm.summary_of_necessity or projectForm.necessity_expression or projectForm.research_history %}
                                                     <a class="nav-link active" id="v-pills-majors-tab"
                                                        data-toggle="pill"
                                                        role="tab" aria-controls="v-pills-majors"
                                                        aria-selected="true">
                                                         بیان مساله
                                                     </a>
+                                                {% endif %}
+                                                {% if projectForm.summary_method or projectForm.required_equipment or projectForm.sample_count_method or projectForm.analyse_method %}
                                                     <a class="nav-link" id="v-pills-approaches-tab"
                                                        data-toggle="pill"
                                                        role="tab" aria-controls="v-pills-approaches"
                                                        aria-selected="false">
                                                         روش اجرا
                                                     </a>
-                                                    <a class="nav-link" id="v-pills-resources-tab"
-                                                       data-toggle="pill"
-                                                       role="tab" aria-controls="v-pills-resources"
-                                                       aria-selected="false">
-                                                        اهداف
-                                                    </a>
-                                                    <a class="nav-link" id="v-pills-roles-tab"
-                                                       data-toggle="pill"
-                                                       role="tab" aria-controls="v-pills-roles"
-                                                       aria-selected="false">
-                                                        ملاحظات اخلاقی
-                                                    </a>
+                                                {% endif %}
+                                                    {% if projectForm.main_goal or projectForm.secondary_goal or projectForm.practical_goal or projectForm.research_question or reseach_assumptions %}
+                                                        <a class="nav-link" id="v-pills-resources-tab"
+                                                           data-toggle="pill"
+                                                           role="tab" aria-controls="v-pills-resources"
+                                                           aria-selected="false">
+                                                            اهداف
+                                                        </a>
+                                                    {% endif %}
+                                                    {% if projectForm.policy or executive_restrictions %}
+                                                        <a class="nav-link" id="v-pills-roles-tab"
+                                                           data-toggle="pill"
+                                                           role="tab" aria-controls="v-pills-roles"
+                                                           aria-selected="false">
+                                                            ملاحظات اخلاقی
+                                                        </a>
+                                                    {% endif %}
                                                 </div>
                                             </div>
                                             <div class="section">
